@@ -1,10 +1,11 @@
 package net.yixi_xun.affix_core.tooltip;
 
-import com.google.common.collect.ArrayListMultimap;
+import com.google.common.collect.LinkedListMultimap;
 import com.google.common.collect.Multimap;
+import it.unimi.dsi.fastutil.objects.Reference2ReferenceLinkedOpenHashMap;
 import net.minecraft.ChatFormatting;
-import net.minecraftforge.common.ForgeMod;
-import net.minecraftforge.registries.ForgeRegistries;
+import net.minecraft.Util;
+import net.minecraft.client.gui.screens.Screen;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.resources.ResourceLocation;
@@ -15,203 +16,202 @@ import net.minecraft.world.entity.ai.attributes.Attributes;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemStack;
 import net.minecraftforge.api.distmarker.Dist;
-import net.minecraftforge.api.distmarker.OnlyIn;
+import net.minecraftforge.common.ForgeMod;
 import net.minecraftforge.event.entity.player.ItemTooltipEvent;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
 import net.minecraftforge.fml.common.Mod;
+import net.minecraftforge.registries.ForgeRegistries;
 import net.yixi_xun.affix_core.AFConfig;
+import net.yixi_xun.affix_core.AffixCoreMod;
+import org.jetbrains.annotations.Nullable;
 
+import java.nio.charset.StandardCharsets;
 import java.text.DecimalFormat;
 import java.text.DecimalFormatSymbols;
 import java.util.*;
 import java.util.function.Consumer;
 
-import static net.yixi_xun.affix_core.AffixCoreMod.MODID;
-
 /**
- * Forge版属性修改器工具提示处理器，来源于Fabric的DynamicTooltips模组
- * 用于合并和显示物品的属性修改器信息
- */
-@Mod.EventBusSubscriber(modid = MODID, value = Dist.CLIENT)
-@OnlyIn(Dist.CLIENT)
+     * 合并的属性修饰符工具提示，移植到1.20.1 Forge版本。
+     */
+@Mod.EventBusSubscriber(modid = AffixCoreMod.MODID, bus = Mod.EventBusSubscriber.Bus.FORGE, value = Dist.CLIENT)
 public class AttributeTooltipHandler {
-
     private static final DecimalFormat FORMAT = new DecimalFormat("#.##", new DecimalFormatSymbols(Locale.ROOT));
-    private static final ResourceLocation FAKE_MERGED_ID = ResourceLocation.fromNamespaceAndPath(MODID, "fake_merged_modifier");
+    private static final UUID FAKE_MERGED_ID = UUID.nameUUIDFromBytes("affix_core:fake_merged_modifier".getBytes(StandardCharsets.UTF_8));
 
-    private static final UUID FAKE_MERGED_UUID = UUID.nameUUIDFromBytes(FAKE_MERGED_ID.toString().getBytes());
+    static final ChatFormatting BASE_COLOR = ChatFormatting.DARK_GREEN;
+    public static final int MERGE_BASE_MODIFIER_COLOR = 16758784; // Gold
+    public static final int MERGED_MODIFIER_COLOR = 7699710; // Light Blue
 
-    // 基础属性ID集合，这些属性被视为"基础"修饰符
-    private static final Set<ResourceLocation> BASE_ATTRIBUTE_IDS;
-    static {
-        Set<ResourceLocation> tempSet = new HashSet<>();
-        addIfNotNull(tempSet, Attributes.ATTACK_DAMAGE);
-        addIfNotNull(tempSet, Attributes.ATTACK_SPEED);
-        tempSet.add(ForgeMod.ENTITY_REACH.getId());
-        BASE_ATTRIBUTE_IDS = Collections.unmodifiableSet(tempSet);
-    }
 
-    // 辅助方法：减少重复代码
-    private static void addIfNotNull(Set<ResourceLocation> set, Attribute attr) {
-        ResourceLocation key = ForgeRegistries.ATTRIBUTES.getKey(attr);
-        if (key != null) set.add(key);
-    }
+    public static final Comparator<AttributeModifier> ATTRIBUTE_MODIFIER_COMPARATOR =
+            Comparator.comparing(AttributeModifier::getOperation)
+                    .thenComparing((AttributeModifier a) -> -Math.abs(a.getAmount()))
+                    .thenComparing(AttributeModifier::getId);
 
-    // 基础修饰符ID映射
-    private static final Map<ResourceLocation, ResourceLocation> BASE_MODIFIER_IDS;
-    static {
-        Map<ResourceLocation, ResourceLocation> tempMap = new HashMap<>();
-        ResourceLocation attackDamageKey = ForgeRegistries.ATTRIBUTES.getKey(Attributes.ATTACK_DAMAGE);
-        ResourceLocation attackSpeedKey = ForgeRegistries.ATTRIBUTES.getKey(Attributes.ATTACK_SPEED);
-        
-        if (attackDamageKey != null) {
-            tempMap.put(attackDamageKey, ResourceLocation.fromNamespaceAndPath("minecraft", "base_attack_damage"));
+    private static final Map<String, EquipmentSlotGroup> KEY_SLOT_MAP = Util.make(new HashMap<>(), map -> {
+        map.put(Component.translatable("item.modifiers.mainhand").getString(), EquipmentSlotGroup.MAINHAND);
+        map.put(Component.translatable("item.modifiers.offhand").getString(), EquipmentSlotGroup.OFFHAND);
+        map.put(Component.translatable("item.modifiers.hand").getString(), EquipmentSlotGroup.HAND);
+        map.put(Component.translatable("item.modifiers.head").getString(), EquipmentSlotGroup.HEAD);
+        map.put(Component.translatable("item.modifiers.chest").getString(), EquipmentSlotGroup.CHEST);
+        map.put(Component.translatable("item.modifiers.legs").getString(), EquipmentSlotGroup.LEGS);
+        map.put(Component.translatable("item.modifiers.feet").getString(), EquipmentSlotGroup.FEET);
+        map.put(Component.translatable("item.modifiers.armor").getString(), EquipmentSlotGroup.ARMOR);
+    });
+
+
+    private static final Set<ResourceLocation> BASE_ATTRIBUTE_IDS = Util.make(new HashSet<>(), set -> {
+        set.add(ForgeRegistries.ATTRIBUTES.getKey(Attributes.ATTACK_DAMAGE));
+        set.add(ForgeRegistries.ATTRIBUTES.getKey(Attributes.ATTACK_SPEED));
+        set.add(ForgeMod.ENTITY_REACH.getId());
+        set.remove(null);
+    });
+
+    private static final Map<Attribute, UUID> BASE_MODIFIER_IDS = Util.make(new HashMap<>(), map -> {
+        map.put(Attributes.ATTACK_DAMAGE, UUID.fromString("CB3F55D3-645C-4F38-A497-9C13A33DB5CF"));
+        map.put(Attributes.ATTACK_SPEED, UUID.fromString("FA233E1C-4180-4865-B01B-BCCE9785ACA3"));
+    });
+
+    public enum EquipmentSlotGroup {
+        MAINHAND(EquipmentSlot.MAINHAND),
+        OFFHAND(EquipmentSlot.OFFHAND),
+        HAND(EquipmentSlot.MAINHAND, EquipmentSlot.OFFHAND),
+        HEAD(EquipmentSlot.HEAD),
+        CHEST(EquipmentSlot.CHEST),
+        LEGS(EquipmentSlot.LEGS),
+        FEET(EquipmentSlot.FEET),
+        ARMOR(EquipmentSlot.HEAD, EquipmentSlot.CHEST, EquipmentSlot.LEGS, EquipmentSlot.FEET);
+
+        private final EquipmentSlot[] slots;
+
+        EquipmentSlotGroup(EquipmentSlot... slots) {
+            this.slots = slots;
         }
-        if (attackSpeedKey != null) {
-            tempMap.put(attackSpeedKey, ResourceLocation.fromNamespaceAndPath("minecraft", "base_attack_speed"));
+
+        public EquipmentSlot[] getSlots() {
+            return slots;
         }
-        BASE_MODIFIER_IDS = Collections.unmodifiableMap(tempMap);
+
+        public boolean contains(EquipmentSlot slot) {
+            for (EquipmentSlot s : slots) {
+                if (s == slot) return true;
+            }
+            return false;
+        }
     }
 
-    private static final Map<String, EquipmentSlot> KEY_SLOT_MAP = new HashMap<>();
-    static {
-        putSlot("item.modifiers.mainhand", EquipmentSlot.MAINHAND);
-        putSlot("item.modifiers.offhand", EquipmentSlot.OFFHAND);
-        putSlot("item.modifiers.head", EquipmentSlot.HEAD);
-        putSlot("item.modifiers.chest", EquipmentSlot.CHEST);
-        putSlot("item.modifiers.legs", EquipmentSlot.LEGS);
-        putSlot("item.modifiers.feet", EquipmentSlot.FEET);
-    }
-
-    private static void putSlot(String key, EquipmentSlot slot) {
-        AttributeTooltipHandler.KEY_SLOT_MAP.put(Component.translatable(key).getString(), slot);
-    }
-
-    /**
-     * 处理物品工具提示事件
-     */
     @SubscribeEvent
-    public static void onItemTooltip(ItemTooltipEvent event) {
-        if (!AFConfig.ENABLE_ATTRIBUTE_TOOLTIP_MERGING.get()) return;
-        
-        ItemStack stack = event.getItemStack();
-        List<Component> tooltip = event.getToolTip();
-        Player player = event.getEntity();
-
-        List<AttributeSection> sections = findAttributeSections(tooltip);
-        if (sections.isEmpty()) return;
-
-        EquipmentSlot initialPrimaryGroup = determinePrimarySlot(stack, sections);
-        if (initialPrimaryGroup == null) return;
-
-        // 获取修饰符
-        Multimap<Attribute, AttributeModifier> mainhandMods = getSortedModifiers(stack, EquipmentSlot.MAINHAND);
-        Multimap<Attribute, AttributeModifier> offhandMods = getSortedModifiers(stack, EquipmentSlot.OFFHAND);
-
-        Multimap<Attribute, AttributeModifier> combinedModifiers = combineModifiers(stack, initialPrimaryGroup, mainhandMods, offhandMods);
-        handleArmorMerging(combinedModifiers, stack, initialPrimaryGroup);
-
-        if (combinedModifiers.isEmpty()) return;
-
-        applyNewTooltip(tooltip, sections, combinedModifiers, stack, player, initialPrimaryGroup);
+    public static void onTooltip(ItemTooltipEvent event) {
+        if (AFConfig.ENABLE_ATTRIBUTE_TOOLTIP_MERGING.get()) {
+            processTooltip(event.getItemStack(), event.getToolTip(), event.getEntity());
+        }
     }
 
-    /**
-     * 确定主要装备槽位
-     */
-    private static EquipmentSlot determinePrimarySlot(ItemStack stack, List<AttributeSection> sections) {
-        // 首先检查是否为护甲物品
-        if (stack.getItem().canEquip(stack, EquipmentSlot.HEAD, null)) {
-            return EquipmentSlot.HEAD;
-        } else if (stack.getItem().canEquip(stack, EquipmentSlot.CHEST, null)) {
-            return EquipmentSlot.CHEST;
-        } else if (stack.getItem().canEquip(stack, EquipmentSlot.LEGS, null)) {
-            return EquipmentSlot.LEGS;
-        } else if (stack.getItem().canEquip(stack, EquipmentSlot.FEET, null)) {
-            return EquipmentSlot.FEET;
-        } else if (stack.getItem().canEquip(stack, EquipmentSlot.MAINHAND, null)) {
-            return EquipmentSlot.MAINHAND;
-        } else if (stack.getItem().canEquip(stack, EquipmentSlot.OFFHAND, null)) {
-            return EquipmentSlot.OFFHAND;
+    private static Set<String> getModifierIdKeys(Multimap<Attribute, AttributeModifier> map) {
+        Set<String> keys = new HashSet<>();
+        map.forEach((attr, mod) -> {
+            ResourceLocation attrId = ForgeRegistries.ATTRIBUTES.getKey(attr);
+            if (attrId != null) {
+                keys.add(attrId + ":" + mod.getId());
+            }
+        });
+        return keys;
+    }
+
+    private static boolean containsExclusiveModifiers(Multimap<Attribute, AttributeModifier> source, Multimap<Attribute, AttributeModifier> target) {
+        Set<String> sourceKeys = getModifierIdKeys(source);
+        Set<String> targetKeys = getModifierIdKeys(target);
+        return !targetKeys.containsAll(sourceKeys);
+    }
+
+    public static void processTooltip(ItemStack stack, List<Component> tooltip, @Nullable Player player) {
+        List<AttributeSection> sections = findAttributeSections(tooltip);
+        if (sections.isEmpty()) {
+            return;
         }
-        
-        // 如果不能装备，根据工具提示中出现的槽位决定
-        List<EquipmentSlot> priorityOrder = Arrays.asList(
-            EquipmentSlot.HEAD, EquipmentSlot.CHEST, EquipmentSlot.LEGS, EquipmentSlot.FEET, // 特定护甲槽
-            EquipmentSlot.MAINHAND,
-            EquipmentSlot.OFFHAND
+
+        EquipmentSlotGroup initialPrimaryGroup = null;
+        List<EquipmentSlotGroup> priorityOrder = List.of(
+                EquipmentSlotGroup.HEAD, EquipmentSlotGroup.CHEST, EquipmentSlotGroup.LEGS, EquipmentSlotGroup.FEET,
+                EquipmentSlotGroup.MAINHAND,
+                EquipmentSlotGroup.HAND,
+                EquipmentSlotGroup.ARMOR
         );
 
-        for (EquipmentSlot potentialPrimary : priorityOrder) {
+        for (EquipmentSlotGroup potentialPrimary : priorityOrder) {
             for (AttributeSection section : sections) {
                 if (section.slot == potentialPrimary) {
-                    return potentialPrimary;
+                    initialPrimaryGroup = potentialPrimary;
+                    break;
+                }
+            }
+            if (initialPrimaryGroup != null) break;
+        }
+
+        if (initialPrimaryGroup == null) {
+            return;
+        }
+
+        Multimap<Attribute, AttributeModifier> handMods = getSortedModifiers(stack, EquipmentSlotGroup.HAND);
+        Multimap<Attribute, AttributeModifier> mainhandMods = getSortedModifiers(stack, EquipmentSlotGroup.MAINHAND);
+        Multimap<Attribute, AttributeModifier> offhandMods = getSortedModifiers(stack, EquipmentSlotGroup.OFFHAND);
+
+        EquipmentSlotGroup finalPrimaryGroup = initialPrimaryGroup;
+
+        if (initialPrimaryGroup == EquipmentSlotGroup.HAND) {
+            boolean mainhandHasExclusives = !mainhandMods.isEmpty() && containsExclusiveModifiers(mainhandMods, handMods);
+            boolean offhandHasExclusives = !offhandMods.isEmpty() && containsExclusiveModifiers(offhandMods, handMods);
+
+            if (mainhandHasExclusives) {
+                finalPrimaryGroup = EquipmentSlotGroup.MAINHAND;
+            } else if (offhandHasExclusives) {
+                finalPrimaryGroup = EquipmentSlotGroup.OFFHAND;
+            } else {
+                Set<String> mainKeys = getModifierIdKeys(mainhandMods);
+                Set<String> offKeys = getModifierIdKeys(offhandMods);
+                if (!mainKeys.equals(offKeys)) {
+                    if (!mainhandMods.isEmpty()) {
+                        finalPrimaryGroup = EquipmentSlotGroup.MAINHAND;
+                    } else if (!offhandMods.isEmpty()) {
+                        finalPrimaryGroup = EquipmentSlotGroup.OFFHAND;
+                    }
                 }
             }
         }
 
-        return null;
-    }
-
-    /**
-     * 合并修饰符
-     */
-    private static Multimap<Attribute, AttributeModifier> combineModifiers(
-            ItemStack stack,
-            EquipmentSlot finalPrimaryGroup,
-            Multimap<Attribute, AttributeModifier> mainhandMods,
-            Multimap<Attribute, AttributeModifier> offhandMods) {
-
-        Multimap<Attribute, AttributeModifier> combinedModifiers = ArrayListMultimap.create();
-        
-        if (finalPrimaryGroup == EquipmentSlot.MAINHAND) {
+        Multimap<Attribute, AttributeModifier> combinedModifiers = LinkedListMultimap.create();
+        if (finalPrimaryGroup == EquipmentSlotGroup.HAND) {
+            combinedModifiers.putAll(handMods);
+            addNonDuplicateModifiers(combinedModifiers, mainhandMods);
+        } else if (finalPrimaryGroup == EquipmentSlotGroup.MAINHAND) {
             combinedModifiers.putAll(mainhandMods);
-        } else if (finalPrimaryGroup == EquipmentSlot.OFFHAND) {
+            addNonDuplicateModifiers(combinedModifiers, handMods);
+        } else if (finalPrimaryGroup == EquipmentSlotGroup.OFFHAND) {
             combinedModifiers.putAll(offhandMods);
+            addNonDuplicateModifiers(combinedModifiers, handMods);
         } else {
-            // 对于护甲/身体槽位，使用它们自己的修饰符
             combinedModifiers.putAll(getSortedModifiers(stack, finalPrimaryGroup));
         }
 
-        return combinedModifiers;
-    }
-
-    /**
-     * 处理护甲合并
-     */
-    private static void handleArmorMerging(
-            Multimap<Attribute, AttributeModifier> combinedModifiers,
-            ItemStack stack,
-            EquipmentSlot finalPrimaryGroup) {
-
-        Set<EquipmentSlot> additionalSlotGroups = new HashSet<>();
-        if (finalPrimaryGroup == EquipmentSlot.HEAD ||
-            finalPrimaryGroup == EquipmentSlot.CHEST ||
-            finalPrimaryGroup == EquipmentSlot.LEGS ||
-            finalPrimaryGroup == EquipmentSlot.FEET) {
-            // 添加所有护甲槽位
-            additionalSlotGroups.add(EquipmentSlot.HEAD);
-            additionalSlotGroups.add(EquipmentSlot.CHEST);
-            additionalSlotGroups.add(EquipmentSlot.LEGS);
-            additionalSlotGroups.add(EquipmentSlot.FEET);
+        Set<EquipmentSlotGroup> additionalSlotGroups = new HashSet<>();
+        if (finalPrimaryGroup == EquipmentSlotGroup.HEAD ||
+                finalPrimaryGroup == EquipmentSlotGroup.CHEST ||
+                finalPrimaryGroup == EquipmentSlotGroup.LEGS ||
+                finalPrimaryGroup == EquipmentSlotGroup.FEET ) {
+            additionalSlotGroups.add(EquipmentSlotGroup.ARMOR);
         }
 
-        for (EquipmentSlot additionalSlot : additionalSlotGroups) {
-            Multimap<Attribute, AttributeModifier> additionalModifiers = getSortedModifiers(stack, additionalSlot);
+        for(EquipmentSlotGroup additionalGroup : additionalSlotGroups) {
+            Multimap<Attribute, AttributeModifier> additionalModifiers = getSortedModifiers(stack, additionalGroup);
             addNonDuplicateModifiers(combinedModifiers, additionalModifiers);
         }
-    }
 
-    /**
-     * 应用新的工具提示
-     */
-    private static void applyNewTooltip(
-            List<Component> tooltip,
-            List<AttributeSection> sections,
-            Multimap<Attribute, AttributeModifier> combinedModifiers,
-            ItemStack stack,
-            Player player,
-            EquipmentSlot slotForHeader) {
+        EquipmentSlotGroup groupForHeader = finalPrimaryGroup;
+
+        if (combinedModifiers.isEmpty()) {
+            return;
+        }
 
         List<Component> newTooltip = new ArrayList<>();
         int currentOriginalIndex = 0;
@@ -221,19 +221,16 @@ public class AttributeTooltipHandler {
         AttributeSection lastSectionOverall = sortedSections.get(sortedSections.size() - 1);
         int endOfLastSectionIndex = lastSectionOverall.startIndex + lastSectionOverall.lineCount;
 
-        // 添加原始工具提示的前半部分
         while (currentOriginalIndex < firstSectionOverall.startIndex) {
             newTooltip.add(tooltip.get(currentOriginalIndex++));
         }
 
-        // 添加头部
-        Component finalHeader = getHeaderForSlot(slotForHeader);
+        Component finalHeader = getHeaderForSlotGroup(groupForHeader);
         newTooltip.add(finalHeader);
 
-        // 应用属性文本
-        applyTextFor(stack, newTooltip::add, combinedModifiers, player);
+        TooltipApplyResult applyResult = applyTextFor(newTooltip::add, combinedModifiers, player);
 
-        // 跳过原有的属性行
+        // Skip original attribute lines
         currentOriginalIndex = endOfLastSectionIndex + 1;
         while (currentOriginalIndex < tooltip.size()) {
             newTooltip.add(tooltip.get(currentOriginalIndex++));
@@ -241,211 +238,189 @@ public class AttributeTooltipHandler {
 
         tooltip.clear();
         tooltip.addAll(newTooltip);
+        new ProcessingResult(true, finalHeader, applyResult.needsShiftPrompt);
     }
 
-    /**
-     * 添加非重复修饰符
-     */
     private static void addNonDuplicateModifiers(
             Multimap<Attribute, AttributeModifier> target,
             Multimap<Attribute, AttributeModifier> source) {
 
-        Set<String> existingIds = new HashSet<>();
-        target.entries().forEach(entry -> {
-            ResourceLocation attrId = ForgeRegistries.ATTRIBUTES.getKey(entry.getKey());
-            if (attrId != null) {
-                existingIds.add(attrId + ":" + entry.getValue().getId());
-            }
-        });
+        Set<String> existingIds = getModifierIdKeys(target);
 
-        source.entries().forEach(entry -> {
-            ResourceLocation attrId = ForgeRegistries.ATTRIBUTES.getKey(entry.getKey());
+        source.forEach((attr, mod) -> {
+            ResourceLocation attrId = ForgeRegistries.ATTRIBUTES.getKey(attr);
             if (attrId != null) {
-                String key = attrId + ":" + entry.getValue().getId();
+                String key = attrId + ":" + mod.getId();
                 if (!existingIds.contains(key)) {
-                    target.put(entry.getKey(), entry.getValue());
+                    target.put(attr, mod);
                 }
             }
         });
     }
 
-    private static Component getHeaderForSlot(EquipmentSlot slot) {
-        String key = switch (slot) {
-            case MAINHAND -> "item.modifiers.mainhand";
-            case OFFHAND -> "item.modifiers.offhand";
-            case HEAD -> "item.modifiers.head";
-            case CHEST -> "item.modifiers.chest";
-            case LEGS -> "item.modifiers.legs";
-            case FEET -> "item.modifiers.feet";
-        };
+    private static Component getHeaderForSlotGroup(EquipmentSlotGroup group) {
+        String groupName = group.name().toLowerCase(Locale.ROOT);
+        String key = "item.modifiers." + groupName;
         return Component.translatable(key).withStyle(ChatFormatting.GRAY);
     }
 
-    /**
-     * 获取排序后的修饰符
-     */
-    private static Multimap<Attribute, AttributeModifier> getSortedModifiers(ItemStack stack, EquipmentSlot slot) {
-        Multimap<Attribute, AttributeModifier> map = ArrayListMultimap.create();
-
-        // 获取指定槽位的所有修饰符
-        stack.getAttributeModifiers(slot).forEach((attribute, modifier) -> {
-            if (attribute != null && modifier != null) {
-                map.put(attribute, modifier);
-            }
-        });
-
+    private static Multimap<Attribute, AttributeModifier> getSortedModifiers(ItemStack stack, EquipmentSlotGroup group) {
+        Multimap<Attribute, AttributeModifier> map = LinkedListMultimap.create();
+        for (EquipmentSlot slot : group.getSlots()) {
+            map.putAll(stack.getAttributeModifiers(slot));
+        }
         return map;
     }
 
-    /**
-     * 应用文本到工具提示
-     */
-    private static void applyTextFor(
-            ItemStack stack,
-            Consumer<Component> tooltip,
-            Multimap<Attribute, AttributeModifier> modifierMap,
-            Player player) {
-
-        if (modifierMap.isEmpty()) {
-            return;
-        }
-
-        // 分离基础修饰符和剩余修饰符
-        Map<Attribute, BaseModifier> baseModifiers = new LinkedHashMap<>();
-        Multimap<Attribute, AttributeModifier> remainingModifiers = ArrayListMultimap.create();
-
-        separateBaseModifiers(modifierMap, baseModifiers, remainingModifiers);
-        processBaseModifiers(stack, tooltip, player, baseModifiers);
-        processRemainingModifiers(stack, tooltip, player, remainingModifiers, baseModifiers.keySet());
+    public static class TooltipApplyResult {
+        boolean needsShiftPrompt = false;
+        Set<Attribute> handledAttributes = new HashSet<>();
     }
 
-    /**
-     * 分离基础修饰符
-     */
+    private static TooltipApplyResult applyTextFor(
+            Consumer<Component> tooltip,
+            Multimap<Attribute, AttributeModifier> modifierMap,
+            @Nullable Player player) {
+
+        TooltipApplyResult result = new TooltipApplyResult();
+        if (modifierMap.isEmpty()) {
+            return result;
+        }
+
+        Map<Attribute, BaseModifier> baseModifiers = new Reference2ReferenceLinkedOpenHashMap<>();
+        Multimap<Attribute, AttributeModifier> remainingModifiers = LinkedListMultimap.create();
+
+        separateBaseModifiers(modifierMap, baseModifiers, remainingModifiers);
+        processBaseModifiers(tooltip, player, baseModifiers, result);
+        processRemainingModifiers(tooltip, modifierMap, baseModifiers.keySet(), result);
+
+        return result;
+    }
+
     private static void separateBaseModifiers(
             Multimap<Attribute, AttributeModifier> modifierMap,
             Map<Attribute, BaseModifier> baseModifiersOutput,
             Multimap<Attribute, AttributeModifier> remainingModifiersOutput) {
 
         remainingModifiersOutput.putAll(modifierMap);
-        List<Map.Entry<Attribute, AttributeModifier>> entries = new ArrayList<>(remainingModifiersOutput.entries());
-        remainingModifiersOutput.clear();
+        var it = remainingModifiersOutput.entries().iterator();
 
-        for (Map.Entry<Attribute, AttributeModifier> entry : entries) {
+        while (it.hasNext()) {
+            var entry = it.next();
             Attribute attr = entry.getKey();
             AttributeModifier modifier = entry.getValue();
 
             if (isBaseModifier(attr, modifier)) {
                 baseModifiersOutput.put(attr, new BaseModifier(modifier, new ArrayList<>()));
-            } else {
-                remainingModifiersOutput.put(attr, modifier);
+                it.remove();
             }
         }
 
-        // 再次遍历剩余修饰符，看是否有属于基础属性的子修饰符
-        entries = new ArrayList<>(remainingModifiersOutput.entries());
-        remainingModifiersOutput.clear();
-
-        for (Map.Entry<Attribute, AttributeModifier> entry : entries) {
+        it = remainingModifiersOutput.entries().iterator();
+        while (it.hasNext()) {
+            var entry = it.next();
             Attribute attr = entry.getKey();
             AttributeModifier modifier = entry.getValue();
             BaseModifier base = baseModifiersOutput.get(attr);
 
             if (base != null && isBaseAttribute(attr)) {
                 base.children.add(modifier);
-            } else {
-                remainingModifiersOutput.put(attr, modifier);
+                it.remove();
             }
         }
     }
 
-    /**
-     * 处理基础修饰符
-     */
     private static void processBaseModifiers(
-            ItemStack stack,
             Consumer<Component> tooltip,
-            Player player,
-            Map<Attribute, BaseModifier> baseModifiers) {
+            @Nullable Player player,
+            Map<Attribute, BaseModifier> baseModifiers,
+            TooltipApplyResult result) {
 
-        // 使用标准排序器对修饰符进行排序
-        Comparator<AttributeModifier> attributeModifierComparator = Comparator.comparing(AttributeModifier::getOperation)
-                .thenComparing((AttributeModifier a) -> -Math.abs(a.getAmount()))
-                .thenComparing(AttributeModifier::getId);
-
-        for (Map.Entry<Attribute, BaseModifier> entry : baseModifiers.entrySet()) {
+        for (var entry : baseModifiers.entrySet()) {
             Attribute attr = entry.getKey();
             BaseModifier baseModifier = entry.getValue();
 
-            double entityBase = player != null ? player.getAttributeBaseValue(attr) : 0;
+            double entityBase = player == null ? 0 : player.getAttributeBaseValue(attr);
             double baseValueFromModifier = baseModifier.base.getAmount();
             double rawBaseValue = baseValueFromModifier + entityBase;
             double finalValue = rawBaseValue;
 
-            // 按操作排序子修饰符以确保正确的计算顺序
-            baseModifier.children.sort(attributeModifierComparator);
+            baseModifier.children.sort(ATTRIBUTE_MODIFIER_COMPARATOR);
 
             for (AttributeModifier childModifier : baseModifier.children) {
-                finalValue = applyModifier(finalValue, rawBaseValue, childModifier.getOperation(), childModifier.getAmount());
+                finalValue = applyModifier(finalValue, rawBaseValue, childModifier);
             }
 
             boolean isMerged = !baseModifier.children.isEmpty();
+            result.needsShiftPrompt |= isMerged;
 
-            MutableComponent text = createBaseComponent(attr, finalValue, entityBase, isMerged);
-            ChatFormatting color = isMerged ? ChatFormatting.GOLD : ChatFormatting.DARK_GREEN;
-            tooltip.accept(Component.literal(" ").append(text.withStyle(color)));
+            MutableComponent text = createBaseComponent(attr, finalValue);
+            ChatFormatting color = isMerged ? null : BASE_COLOR;
+            Integer intColor = isMerged ? MERGE_BASE_MODIFIER_COLOR : null;
+            tooltip.accept(Component.literal(" ").append(text.withStyle(style -> {
+                if (intColor != null) return style.withColor(intColor);
+                return style.applyFormat(color);
+            })));
 
-            if (isMerged) {
-                // 显示详细视图
-                text = createBaseComponent(attr, rawBaseValue, entityBase, false);
-                tooltip.accept(listHeader().append(text.withStyle(ChatFormatting.DARK_GREEN)));
+            if (Screen.hasShiftDown() && isMerged) {
+                text = createBaseComponent(attr, rawBaseValue);
+                tooltip.accept(listHeader().append(text.withStyle(BASE_COLOR)));
 
                 for (AttributeModifier modifier : baseModifier.children) {
                     tooltip.accept(listHeader().append(createModifierComponent(attr, modifier)));
                 }
             }
+
+            result.handledAttributes.add(attr);
         }
     }
 
-    /**
-     * 处理剩余的修饰符
-     */
+    private static double applyModifier(double currentValue, double baseValue, AttributeModifier modifier) {
+        return switch (modifier.getOperation()) {
+            case ADDITION -> currentValue + modifier.getAmount();
+            case MULTIPLY_BASE -> currentValue + modifier.getAmount() * baseValue;
+            case MULTIPLY_TOTAL -> currentValue * (1.0 + modifier.getAmount());
+        };
+    }
+
     private static void processRemainingModifiers(
-            ItemStack stack,
             Consumer<Component> tooltip,
-            Player player,
             Multimap<Attribute, AttributeModifier> remainingModifiers,
-            Set<Attribute> processedBaseAttributes) {
+            Set<Attribute> processedBaseAttributes,
+            TooltipApplyResult result) {
 
-        // 按属性排序
-        List<Map.Entry<Attribute, Collection<AttributeModifier>>> sortedEntries = remainingModifiers.asMap().entrySet().stream()
-                .filter(entry -> {
-                    Attribute attr = entry.getKey();
-                    ResourceLocation attrId = ForgeRegistries.ATTRIBUTES.getKey(attr);
-                    return attrId != null && !processedBaseAttributes.contains(attr);
-                })
-                .sorted(Comparator.comparing(entry -> ForgeRegistries.ATTRIBUTES.getKey(entry.getKey()),
-                                             Comparator.nullsLast(Comparator.naturalOrder())))
-                .toList();
+        Map<Attribute, Collection<AttributeModifier>> sortedRemaining = new TreeMap<>(Comparator.comparing(
+                ForgeRegistries.ATTRIBUTES::getKey,
+                Comparator.nullsLast(Comparator.naturalOrder())
+        ));
+        for (Attribute attr : remainingModifiers.keySet()) {
+            if (!processedBaseAttributes.contains(attr)) {
+                List<AttributeModifier> mods = new ArrayList<>(remainingModifiers.get(attr));
+                mods.sort(ATTRIBUTE_MODIFIER_COMPARATOR);
+                sortedRemaining.put(attr, mods);
+            }
+        }
 
-        for (Map.Entry<Attribute, Collection<AttributeModifier>> entry : sortedEntries) {
+        for (Map.Entry<Attribute, Collection<AttributeModifier>> entry : sortedRemaining.entrySet()) {
             Attribute attr = entry.getKey();
             Collection<AttributeModifier> modifiers = entry.getValue();
 
+
+            if (result.handledAttributes.contains(attr)) {
+                continue;
+            }
             if (modifiers.isEmpty()) continue;
 
-            // 处理非基础合并
-            handleNonBaseMerging(attr, modifiers, tooltip);
+            handleNonBaseMerging(attr, modifiers, tooltip, result);
+            result.handledAttributes.add(attr);
         }
     }
 
-    /**
-     * 处理非基础合并
-     */
     private static void handleNonBaseMerging(
             Attribute attr,
             Collection<AttributeModifier> modifiers,
-            Consumer<Component> tooltip) {
+            Consumer<Component> tooltip,
+            TooltipApplyResult result) {
 
         Map<AttributeModifier.Operation, MergedModifierData> mergeData = new EnumMap<>(AttributeModifier.Operation.class);
         List<AttributeModifier> nonMergeable = new ArrayList<>();
@@ -454,8 +429,8 @@ public class AttributeTooltipHandler {
             if (modifier.getAmount() == 0) continue;
 
             boolean canMerge = modifier.getOperation() == AttributeModifier.Operation.ADDITION ||
-                               modifier.getOperation() == AttributeModifier.Operation.MULTIPLY_BASE ||
-                               modifier.getOperation() == AttributeModifier.Operation.MULTIPLY_TOTAL;
+                    modifier.getOperation() == AttributeModifier.Operation.MULTIPLY_BASE ||
+                    modifier.getOperation() == AttributeModifier.Operation.MULTIPLY_TOTAL;
 
             if (isBaseModifier(attr, modifier)) {
                 canMerge = false;
@@ -465,6 +440,7 @@ public class AttributeTooltipHandler {
                 MergedModifierData data = mergeData.computeIfAbsent(modifier.getOperation(), op -> new MergedModifierData());
                 if (!data.children.isEmpty()) {
                     data.isMerged = true;
+                    result.needsShiftPrompt = true;
                 }
                 data.sum += modifier.getAmount();
                 data.children.add(modifier);
@@ -477,55 +453,35 @@ public class AttributeTooltipHandler {
             MergedModifierData data = mergeData.get(op);
             if (data == null || data.sum == 0) continue;
 
-            AttributeModifier fakeModifier = new AttributeModifier(FAKE_MERGED_UUID, FAKE_MERGED_ID.getPath(), data.sum, op);
+            AttributeModifier fakeModifier = new AttributeModifier(FAKE_MERGED_ID.toString(), data.sum, op);
             MutableComponent modComponent = createModifierComponent(attr, fakeModifier);
 
             if (data.isMerged) {
-                // 使用浅蓝色表示合并的非基础属性
-                tooltip.accept(modComponent.withStyle(ChatFormatting.AQUA));
+                tooltip.accept(modComponent.withStyle(style -> style.withColor(MERGED_MODIFIER_COLOR)));
 
-                data.children.sort(Comparator.comparing(AttributeModifier::getOperation)
-                        .thenComparing(mod -> -Math.abs(mod.getAmount()))
-                        .thenComparing(AttributeModifier::getId));
-                for (AttributeModifier mod : data.children) {
-                    tooltip.accept(listHeader().append(createModifierComponent(attr, mod)));
+                if (Screen.hasShiftDown()) {
+                    data.children.sort(ATTRIBUTE_MODIFIER_COMPARATOR);
+                    for (AttributeModifier mod : data.children) {
+                        tooltip.accept(listHeader().append(createModifierComponent(attr, mod)));
+                    }
                 }
             } else if (!data.children.isEmpty()) {
                 tooltip.accept(createModifierComponent(attr, data.children.get(0)));
             }
         }
 
-        nonMergeable.sort(Comparator.comparing(AttributeModifier::getOperation)
-                .thenComparing(mod -> -Math.abs(mod.getAmount()))
-                .thenComparing(AttributeModifier::getId));
+        nonMergeable.sort(ATTRIBUTE_MODIFIER_COMPARATOR);
         for (AttributeModifier modifier : nonMergeable) {
             tooltip.accept(createModifierComponent(attr, modifier));
         }
     }
 
-    /**
-     * 应用修饰符
-     */
-    private static double applyModifier(double currentValue, double baseValue, AttributeModifier.Operation operation, double amount) {
-        return switch (operation) {
-            case ADDITION -> currentValue + amount;
-            case MULTIPLY_BASE -> currentValue + amount * baseValue;
-            case MULTIPLY_TOTAL -> currentValue * (1.0 + amount);
-        };
-    }
-
-    /**
-     * 创建基础组件
-     */
-    private static MutableComponent createBaseComponent(Attribute attribute, double value, double entityBase, boolean merged) {
+    private static MutableComponent createBaseComponent(Attribute attribute, double value) {
         return Component.translatable("attribute.modifier.equals.0",
                 FORMAT.format(value),
                 Component.translatable(attribute.getDescriptionId()));
     }
 
-    /**
-     * 优化4: 还原原版属性的颜色逻辑
-     */
     public static MutableComponent createModifierComponent(Attribute attribute, AttributeModifier modifier) {
         double value = modifier.getAmount();
         boolean isPositive = value > 0;
@@ -539,73 +495,59 @@ public class AttributeTooltipHandler {
                 formattedValue,
                 Component.translatable(attribute.getDescriptionId()));
 
-        // 检查是否为假合并的修饰符（浅蓝色）
-        if (!isBaseAttribute(attribute) && modifier.getId().equals(FAKE_MERGED_UUID)) {
-            return component.withStyle(ChatFormatting.AQUA);
+        if (!isBaseAttribute(attribute) && modifier.getId().equals(FAKE_MERGED_ID)) {
+            return component.withStyle(style -> style.withColor(MERGED_MODIFIER_COLOR));
         }
 
-        ChatFormatting color = isPositive ? ChatFormatting.BLUE : ChatFormatting.RED;
+        ChatFormatting color = ChatFormatting.WHITE;
+        boolean handledByRule = false;
 
-        return component.withStyle(color);
+        if (!handledByRule) {
+            color = isPositive ? ChatFormatting.BLUE : ChatFormatting.RED;
+        }
+
+        final ChatFormatting finalColor = color;
+        return component.withStyle(style -> style.withColor(finalColor));
     }
 
-    /**
-     * 格式化值
-     */
     private static String formatValue(Attribute attribute, double value, AttributeModifier.Operation operation) {
         double absValue = Math.abs(value);
 
         if (operation == AttributeModifier.Operation.ADDITION) {
-            // 特殊处理击退抗性（显示为百分比）
             if (attribute == Attributes.KNOCKBACK_RESISTANCE) {
-                return FORMAT.format(absValue * 100) + "%";
+                return FORMAT.format(absValue * 100) + "%" ;
             } else {
                 return FORMAT.format(absValue);
             }
         } else {
-            return FORMAT.format(absValue * 100) + "%";
+            return FORMAT.format(absValue * 100);
         }
     }
 
-    /**
-     * 检查是否为基础属性
-     */
     private static boolean isBaseAttribute(Attribute attribute) {
         ResourceLocation id = ForgeRegistries.ATTRIBUTES.getKey(attribute);
         return id != null && BASE_ATTRIBUTE_IDS.contains(id);
     }
 
-    /**
-     * 检查是否为基础修饰符
-     */
     private static boolean isBaseModifier(Attribute attribute, AttributeModifier modifier) {
-        ResourceLocation baseId = getBaseModifierId(attribute);
-        return baseId != null && modifier.getId().equals(UUID.nameUUIDFromBytes(baseId.toString().getBytes()));
+        UUID baseId = getBaseModifierId(attribute);
+        return modifier.getId().equals(baseId);
     }
 
-    /**
-     * 获取基础修饰符ID
-     */
-    private static ResourceLocation getBaseModifierId(Attribute attribute) {
-        ResourceLocation id = ForgeRegistries.ATTRIBUTES.getKey(attribute);
-        return id != null ? BASE_MODIFIER_IDS.get(id) : null;
+    @Nullable
+    private static UUID getBaseModifierId(Attribute attribute) {
+        return BASE_MODIFIER_IDS.get(attribute);
     }
 
-    /**
-     * 列表头部
-     */
     public static MutableComponent listHeader() {
         return Component.literal(" ┇ ").withStyle(ChatFormatting.GRAY);
     }
 
-    /**
-     * 查找属性部分
-     */
     private static List<AttributeSection> findAttributeSections(List<Component> tooltip) {
         List<AttributeSection> result = new ArrayList<>();
         for (int i = 0; i < tooltip.size(); i++) {
             Component line = tooltip.get(i);
-            EquipmentSlot slot = getSlotFromText(line);
+            EquipmentSlotGroup slot = getSlotFromText(line);
 
             if (slot != null) {
                 int numLines = countAttributeLines(tooltip, i + 1);
@@ -617,36 +559,27 @@ public class AttributeTooltipHandler {
         return result;
     }
 
-    /**
-     * 从文本获取槽位
-     */
-    public static EquipmentSlot getSlotFromText(Component text) {
+    public static EquipmentSlotGroup getSlotFromText(Component text) {
         String content = text.getString();
         return KEY_SLOT_MAP.get(content);
     }
 
-    /**
-     * 计算属性行数
-     */
     private static int countAttributeLines(List<Component> tooltip, int startIndex) {
         int count = 0;
         for (int i = startIndex; i < tooltip.size(); i++) {
             Component lineComp = tooltip.get(i);
             String line = lineComp.getString();
 
-            // 如果遇到空行或其他槽位标题则停止
             if (line.isEmpty() || getSlotFromText(lineComp) != null) {
                 break;
             }
 
-            // 检查行是否看起来像修饰符（以空格、+、-、数字或括号开头）
             String trimmedLine = line.trim();
             if (trimmedLine.isEmpty()) {
                 break;
             }
             char firstChar = trimmedLine.charAt(0);
-            boolean looksLikeModifier = line.startsWith(" ") || firstChar == '+' || firstChar == '-' || 
-                                       Character.isDigit(firstChar) || firstChar == '(';
+            boolean looksLikeModifier = line.startsWith(" ") || firstChar == '+' || firstChar == '-' || Character.isDigit(firstChar) || firstChar == '(';
 
             if (!looksLikeModifier) {
                 break;
@@ -657,24 +590,25 @@ public class AttributeTooltipHandler {
         return count;
     }
 
-    /**
-     * 合并修饰符数据类
-     */
+    public static class BaseModifier {
+        final AttributeModifier base;
+        final List<AttributeModifier> children;
+
+        BaseModifier(AttributeModifier base, List<AttributeModifier> children) {
+            this.base = base;
+            this.children = children;
+        }
+    }
+
     private static class MergedModifierData {
         double sum = 0;
         boolean isMerged = false;
         List<AttributeModifier> children = new ArrayList<>();
     }
 
-    /**
-         * 基础修饰符类
-         */
-        private record BaseModifier(AttributeModifier base, List<AttributeModifier> children) {
+    private record AttributeSection(int startIndex, int lineCount, EquipmentSlotGroup slot) {
     }
 
-    /**
-         * 属性部分类
-         */
-        private record AttributeSection(int startIndex, int lineCount, EquipmentSlot slot) {
+    public record ProcessingResult(boolean modified, @Nullable Component finalHeader, boolean needsShiftPrompt) {
     }
 }
